--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0005.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0005.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0005.png">
-      <!--<div class="ocr_carea" title="bbox 374 570 1702 1598">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 388 588 1686 676">
         <span id="w_0" class="ocr_word" title="bbox 388 588 1074 676">
           <span class="alternatives">
@@ -33,8 +31,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 900 1037 1176 1073">
         <span id="w_3" class="ocr_word" title="bbox 900 1037 1176 1073">
           <span class="alternatives">
@@ -43,8 +39,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 672 1164 1402 1212">
         <span id="w_4" class="ocr_word" title="bbox 672 1164 997 1212">
           <span class="alternatives">
@@ -65,8 +59,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 850 1437 1223 1479">
         <span id="w_7" class="ocr_word" title="bbox 850 1437 1168 1479">
           <span class="alternatives">
@@ -107,10 +99,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 704 1824 1366 1942">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 795 1830 1283 1861">
         <span id="w_13" class="ocr_word" title="bbox 795 1831 962 1861">
           <span class="alternatives">
@@ -145,10 +133,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 166 3086 1918 3146">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 181 3096 1901 3141">
         <span id="w_18" class="ocr_word" title="bbox 181 3096 643 3140">
           <span class="alternatives">
@@ -193,8 +177,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
