--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0006.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0006.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0006.png">
-      <!--<div class="ocr_carea" title="bbox 1014 1862 1396 1942">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1028 1875 1380 1939">
         <span id="w_0" class="ocr_word" title="bbox 1028 1875 1380 1939">
           <span class="alternatives">
@@ -18,10 +16,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 704 2926 1828 3206">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 718 2933 1811 2971">
         <span id="w_1" class="ocr_word" title="bbox 718 2943 780 2967">
           <span class="alternatives">
@@ -37,15 +31,12 @@
         </span>
         <span id="w_3" class="ocr_word" title="bbox 920 2941 989 2966">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">«nch</ins>
+            <ins title="nlp 2.00">auch</ins>
           </span>
         </span>
-        <span id="w_4" class="ocr_word" title="bbox 1002 2941 1047 2965" xml:lang="grc">
+        <span id="w_4" class="ocr_word" title="bbox 1002 2941 1047 2965" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">δἰe</ins>
-            <del title="nlp 0.90">διὸ</del>
-            <del title="nlp 0.89">διό</del>
-            <del title="nlp 0.88">διῶ</del>
+            <ins title="nlp 2.00">die</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1060 2940 1108 2964">
@@ -79,8 +70,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 870 2994 1659 3028">
         <span id="w_10" class="ocr_word" title="bbox 870 3001 925 3025">
           <span class="alternatives">
@@ -113,12 +102,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 820 3052 1711 3092">
         <span id="w_15" class="ocr_word" title="bbox 820 3060 853 3092">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">©</ins>
+            <ins title="nlp 2.00">©</ins>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 873 3060 906 3084">
@@ -163,8 +150,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1114 3113 1416 3146">
         <span id="w_23" class="ocr_word" title="bbox 1114 3116 1226 3140">
           <span class="alternatives">
@@ -185,8 +170,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 964 3171 1569 3202">
         <span id="w_26" class="ocr_word" title="bbox 964 3174 1080 3202">
           <span class="alternatives">
@@ -218,10 +201,9 @@
             <del title="nlp 0.90">a.</del>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 1497 3171 1524 3195" xml:lang="grc">
+        <span id="w_31" class="ocr_word" title="bbox 1497 3171 1524 3195" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.99">.</ins>
-            <del title="nlp 0.90">ό.</del>
+            <ins title="nlp 2.00">d.</ins>
           </span>
         </span>
         <span id="w_32" class="ocr_word" title="bbox 1537 3171 1569 3195">
@@ -231,8 +213,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
