--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0007.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0007.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0007.png">
-      <!--<div class="ocr_carea" title="bbox 114 754 1898 3236">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 846 765 1166 817">
         <span id="w_0" class="ocr_word" title="bbox 846 765 1166 817">
           <span class="alternatives">
@@ -19,8 +17,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 255 954 1882 1013">
         <span id="w_1" class="ocr_word" title="bbox 255 954 483 1013">
           <span class="alternatives">
@@ -66,18 +62,11 @@
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1704 954 1882 1012">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Usener,</ins>
-            <del title="nlp 0.90">Usener,</del>
+            <ins title="nlp 2.00">Usenervir</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 136 1026 1882 1083">
-        <span id="w_9" class="ocr_word" title="bbox 136 1028 202 1071">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">yir</ins>
-            <del title="nlp 0.90">yir</del>
-          </span>
-        </span>
         <span id="w_10" class="ocr_word" title="bbox 232 1042 396 1070">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">summe</ins>
@@ -133,17 +122,11 @@
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1818 1043 1882 1071">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ar-</ins>
+            <ins title="nlp 2.00">arduum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 134 1097 1882 1156">
-        <span id="w_20" class="ocr_word" title="bbox 134 1098 264 1142">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">duum</ins>
-            <del title="nlp 0.90">arduum</del>
-          </span>
-        </span>
         <span id="w_21" class="ocr_word" title="bbox 297 1114 404 1155">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">opus</ins>
@@ -200,17 +183,11 @@
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1806 1098 1882 1142">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Or-</ins>
+            <ins title="nlp 2.00">Ordine</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 135 1169 1880 1226">
-        <span id="w_31" class="ocr_word" title="bbox 135 1170 232 1213">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dine</ins>
-            <del title="nlp 0.90">Ordine</del>
-          </span>
-        </span>
         <span id="w_32" class="ocr_word" title="bbox 258 1169 618 1226">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Philosophoruni</ins>
@@ -243,17 +220,11 @@
         </span>
         <span id="w_37" class="ocr_word" title="bbox 1749 1170 1880 1214">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Zeuo-</ins>
+            <ins title="nlp 2.00">Zenonis,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 135 1240 1879 1298">
-        <span id="w_38" class="ocr_word" title="bbox 135 1242 214 1298">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">nis,</ins>
-            <del title="nlp 0.90">Zeuonis,</del>
-          </span>
-        </span>
         <span id="w_39" class="ocr_word" title="bbox 239 1240 473 1296">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Cleanthis,</ins>
@@ -416,17 +387,11 @@
         </span>
         <span id="w_65" class="ocr_word" title="bbox 1820 1389 1880 1430">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vi-</ins>
+            <ins title="nlp 2.00">viderem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 134 1456 1877 1515">
-        <span id="w_66" class="ocr_word" title="bbox 134 1457 274 1500">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">derem</ins>
-            <del title="nlp 0.90">viderem</del>
-          </span>
-        </span>
         <span id="w_67" class="ocr_word" title="bbox 307 1457 519 1513">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">coUectas,</ins>
@@ -595,17 +560,11 @@
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1671 1604 1879 1659">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">complec-</ins>
+            <ins title="nlp 2.00">complecterer.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 132 1670 1875 1728">
-        <span id="w_95" class="ocr_word" title="bbox 132 1675 254 1715">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">terer.</ins>
-            <del title="nlp 0.90">complecterer.</del>
-          </span>
-        </span>
         <span id="w_96" class="ocr_word" title="bbox 315 1672 470 1715">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Postea</ins>
@@ -830,17 +789,11 @@
         </span>
         <span id="w_132" class="ocr_word" title="bbox 1607 1892 1878 1947">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">comprehen-</ins>
+            <ins title="nlp 2.00">comprehenderem.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 131 1959 1876 2017">
-        <span id="w_133" class="ocr_word" title="bbox 131 1959 285 2002">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">derem.</ins>
-            <del title="nlp 0.90">comprehenderem.</del>
-          </span>
-        </span>
         <span id="w_134" class="ocr_word" title="bbox 346 1959 489 2015">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Atque</ins>
@@ -965,17 +918,11 @@
         </span>
         <span id="w_154" class="ocr_word" title="bbox 1744 2035 1876 2090">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">perle-</ins>
+            <ins title="nlp 2.00">perlegeram,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 131 2101 1877 2163">
-        <span id="w_155" class="ocr_word" title="bbox 131 2117 288 2160">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">geram,</ins>
-            <del title="nlp 0.90">perlegeram,</del>
-          </span>
-        </span>
         <span id="w_156" class="ocr_word" title="bbox 320 2103 474 2145">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">iterum</ins>
@@ -1026,17 +973,11 @@
         </span>
         <span id="w_164" class="ocr_word" title="bbox 1782 2122 1877 2163">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pro-</ins>
+            <ins title="nlp 2.00">proponuntur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 131 2174 1875 2232">
-        <span id="w_165" class="ocr_word" title="bbox 131 2178 350 2231">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ponuntur</ins>
-            <del title="nlp 0.90">proponuntur</del>
-          </span>
-        </span>
         <span id="w_166" class="ocr_word" title="bbox 383 2174 612 2232">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Chrysippi</ins>
@@ -1081,17 +1022,11 @@
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1734 2182 1875 2222">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aucto-</ins>
+            <ins title="nlp 2.00">auctorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 130 2246 1875 2306">
-        <span id="w_174" class="ocr_word" title="bbox 130 2261 226 2289">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rum</ins>
-            <del title="nlp 0.90">auctorum</del>
-          </span>
-        </span>
         <span id="w_175" class="ocr_word" title="bbox 251 2247 435 2290">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">lectione</ins>
@@ -1186,17 +1121,11 @@
         </span>
         <span id="w_190" class="ocr_word" title="bbox 1700 2321 1877 2365">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Wachs-</ins>
+            <ins title="nlp 2.00">Wachsmuthii,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 130 2389 1874 2451">
-        <span id="w_191" class="ocr_word" title="bbox 130 2389 300 2446">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">muthii,</ins>
-            <del title="nlp 0.90">Wachsmuthii,</del>
-          </span>
-        </span>
         <span id="w_192" class="ocr_word" title="bbox 331 2390 535 2433">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Pearsoni</ins>
@@ -1320,17 +1249,11 @@
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1811 2481 1875 2508">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ac-</ins>
+            <ins title="nlp 2.00">accommodarem</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 131 2533 1874 2592">
-        <span id="w_213" class="ocr_word" title="bbox 131 2534 443 2576">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">commodarem</ins>
-            <del title="nlp 0.90">accommodarem</del>
-          </span>
-        </span>
         <span id="w_214" class="ocr_word" title="bbox 476 2537 519 2577">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">et</ins>
@@ -1407,7 +1330,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 929 2605 1032 2648">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">\iris</ins>
+            <ins title="nlp 2.00">viris</ins>
           </span>
         </span>
         <span id="w_227" class="ocr_word" title="bbox 1064 2604 1150 2648">
@@ -1434,22 +1357,14 @@
             <del title="nlp 0.90">gratiam</del>
           </span>
         </span>
-        <span id="w_231" class="ocr_word" title="bbox 1813 2626 1875 2653">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">re-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 129 2678 295 2720">
         <span id="w_232" class="ocr_word" title="bbox 129 2678 295 2720">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ferrem.</ins>
-            <del title="nlp 0.90">referrem.</del>
+            <ins title="nlp 2.00">referrem.</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 247 2748 1872 2809">
         <span id="w_233" class="ocr_word" title="bbox 247 2748 399 2805">
           <span class="alternatives">
@@ -1551,7 +1466,7 @@
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1784 2824 1874 2868">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Cle-</ins>
+            <ins title="nlp 2.00">Cleanthi</ins>
           </span>
         </span>
       </span>
@@ -1779,17 +1694,13 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1556 3196 1601 3232">
         <span id="w_286" class="ocr_word" title="bbox 1556 3196 1601 3232">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1*</ins>
+            <ins title="nlp 2.00">1*</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
