--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0008.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0008.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0008.png">
-      <!--<div class="ocr_carea" title="bbox 268 160 2040 3184">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 292 166 1289 204">
         <span id="w_0" class="ocr_word" title="bbox 292 167 342 204">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 294 274 2023 333">
         <span id="w_2" class="ocr_word" title="bbox 294 276 408 319">
           <span class="alternatives">
@@ -208,17 +204,11 @@
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1910 422 2022 462">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ante-</ins>
+            <ins title="nlp 2.00">antecessoribus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 292 486 2023 545">
-        <span id="w_32" class="ocr_word" title="bbox 292 489 531 532">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cessonbus</ins>
-            <del title="nlp 0.90">antecessonbus</del>
-          </span>
-        </span>
         <span id="w_33" class="ocr_word" title="bbox 576 489 801 544">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">diligenter</ins>
@@ -357,17 +347,11 @@
         </span>
         <span id="w_55" class="ocr_word" title="bbox 1965 632 2023 674">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">in-</ins>
+            <ins title="nlp 2.00">institui</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 293 700 2022 758">
-        <span id="w_56" class="ocr_word" title="bbox 293 702 413 745">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">stitui</ins>
-            <del title="nlp 0.90">institui</del>
-          </span>
-        </span>
         <span id="w_57" class="ocr_word" title="bbox 446 705 626 758">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">oportet,</ins>
@@ -548,17 +532,11 @@
         </span>
         <span id="w_86" class="ocr_word" title="bbox 1928 857 2023 898">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pro-</ins>
+            <ins title="nlp 2.00">probabili</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 293 912 2022 970">
-        <span id="w_87" class="ocr_word" title="bbox 293 915 425 958">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">babili</ins>
-            <del title="nlp 0.90">probabili</del>
-          </span>
-        </span>
         <span id="w_88" class="ocr_word" title="bbox 456 915 664 970">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">nituntur,</ins>
@@ -677,17 +655,11 @@
         </span>
         <span id="w_107" class="ocr_word" title="bbox 1886 984 2023 1039">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">philo-</ins>
+            <ins title="nlp 2.00">philosophiam</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 293 1054 2023 1113">
-        <span id="w_108" class="ocr_word" title="bbox 293 1057 486 1113">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sophiam</ins>
-            <del title="nlp 0.90">philosophiam</del>
-          </span>
-        </span>
         <span id="w_109" class="ocr_word" title="bbox 512 1072 564 1099">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ex</ins>
@@ -792,17 +764,11 @@
             <del title="nlp 0.90">hoc</del>
           </span>
         </span>
-        <span id="w_126" class="ocr_word" title="bbox 1940 1127 2023 1182">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pri-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 291 1198 968 1242">
         <span id="w_127" class="ocr_word" title="bbox 291 1214 407 1242">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mum</ins>
-            <del title="nlp 0.90">primum</del>
+            <ins title="nlp 2.00">primum</ins>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 440 1198 640 1242">
@@ -818,8 +784,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 408 1268 2023 1326">
         <span id="w_130" class="ocr_word" title="bbox 408 1269 551 1326">
           <span class="alternatives">
@@ -951,17 +915,11 @@
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1913 1340 2020 1397">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">frag-</ins>
+            <ins title="nlp 2.00">fragmentorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 291 1410 2023 1468">
-        <span id="w_152" class="ocr_word" title="bbox 291 1416 532 1456">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mentorum</ins>
-            <del title="nlp 0.90">fragmentorum</del>
-          </span>
-        </span>
         <span id="w_153" class="ocr_word" title="bbox 564 1412 737 1468">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">ubique,</ins>
@@ -1180,17 +1138,11 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1909 1639 2021 1667">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">secu-</ins>
+            <ins title="nlp 2.00">secutus</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 289 1694 2023 1755">
-        <span id="w_189" class="ocr_word" title="bbox 289 1701 360 1741">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tus</ins>
-            <del title="nlp 0.90">secutus</del>
-          </span>
-        </span>
         <span id="w_190" class="ocr_word" title="bbox 393 1713 499 1755">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sum,</ins>
@@ -1229,17 +1181,11 @@
         </span>
         <span id="w_196" class="ocr_word" title="bbox 1894 1695 2023 1737">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inser-</ins>
+            <ins title="nlp 2.00">inservire</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 293 1766 2022 1823">
-        <span id="w_197" class="ocr_word" title="bbox 293 1770 377 1813">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vire</ins>
-            <del title="nlp 0.90">inservire</del>
-          </span>
-        </span>
         <span id="w_198" class="ocr_word" title="bbox 408 1769 537 1814">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">vohii.</ins>
@@ -1248,7 +1194,7 @@
         </span>
         <span id="w_199" class="ocr_word" title="bbox 575 1795 625 1800">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_200" class="ocr_word" title="bbox 658 1767 922 1811">
@@ -1289,17 +1235,11 @@
         </span>
         <span id="w_206" class="ocr_word" title="bbox 1746 1766 2022 1822">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">philosopho-</ins>
+            <ins title="nlp 2.00">philosophorum</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 290 1836 2021 1896">
-        <span id="w_207" class="ocr_word" title="bbox 290 1856 384 1884">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">rura</ins>
-            <del title="nlp 0.90">philosophorura</del>
-          </span>
-        </span>
         <span id="w_208" class="ocr_word" title="bbox 439 1840 720 1896">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">pertinerent,</ins>
@@ -1344,12 +1284,12 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 291 1908 2021 1968">
-        <span id="w_215" class="ocr_word" title="bbox 291 1911 647 1968" xml:lang="grc">
+        <span id="w_215" class="ocr_word" title="bbox 291 1911 647 1968" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(ἀποφθέγματα,</ins>
+            <ins class="alt" title="nlp 1.00">ἀποφθέγματα,</ins>
           </span>
         </span>
-        <span id="w_216" class="ocr_word" title="bbox 673 1909 852 1967" xml:lang="grc">
+        <span id="w_216" class="ocr_word" title="bbox 673 1909 852 1967" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">χρείας),</ins>
           </span>
@@ -1400,7 +1340,7 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 539 2008 592 2013">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
+            <ins title="nlp 2.00">—</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 626 1981 960 2024">
@@ -1503,17 +1443,11 @@
         </span>
         <span id="w_241" class="ocr_word" title="bbox 1892 2051 2021 2108">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">signi-</ins>
+            <ins title="nlp 2.00">significarem.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 288 2121 2021 2169">
-        <span id="w_242" class="ocr_word" title="bbox 288 2126 470 2169">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ficarem.</ins>
-            <del title="nlp 0.90">significarem.</del>
-          </span>
-        </span>
         <span id="w_243" class="ocr_word" title="bbox 532 2125 757 2168">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Praeterea</ins>
@@ -1558,17 +1492,11 @@
         </span>
         <span id="w_250" class="ocr_word" title="bbox 1889 2122 2021 2165">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">varie-</ins>
+            <ins title="nlp 2.00">varietates</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 288 2193 2020 2253">
-        <span id="w_251" class="ocr_word" title="bbox 288 2200 397 2240">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tates</ins>
-            <del title="nlp 0.90">varietates</del>
-          </span>
-        </span>
         <span id="w_252" class="ocr_word" title="bbox 430 2196 647 2253">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">adscripsi,</ins>
@@ -1625,17 +1553,11 @@
         </span>
         <span id="w_261" class="ocr_word" title="bbox 1960 2195 2020 2236">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vi-</ins>
+            <ins title="nlp 2.00">viderentur.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 289 2265 2018 2324">
-        <span id="w_262" class="ocr_word" title="bbox 289 2269 499 2311">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">derentur.</ins>
-            <del title="nlp 0.90">viderentur.</del>
-          </span>
-        </span>
         <span id="w_263" class="ocr_word" title="bbox 561 2268 611 2310">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">In</ins>
@@ -1823,8 +1745,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 406 2550 2019 2608">
         <span id="w_293" class="ocr_word" title="bbox 406 2553 521 2604">
           <span class="alternatives">
@@ -1864,7 +1784,7 @@
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1813 2550 2019 2594">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Metathe-</ins>
+            <ins title="nlp 2.00">Metathemeni,</ins>
           </span>
         </span>
       </span>
@@ -1981,17 +1901,11 @@
         </span>
         <span id="w_318" class="ocr_word" title="bbox 1957 2696 2018 2735">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ta-</ins>
+            <ins title="nlp 2.00">talium</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 286 2764 2016 2822">
-        <span id="w_319" class="ocr_word" title="bbox 286 2769 390 2810">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">lium</ins>
-            <del title="nlp 0.90">talium</del>
-          </span>
-        </span>
         <span id="w_320" class="ocr_word" title="bbox 435 2768 690 2822">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">scriptorum</ins>
@@ -2327,8 +2241,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
