--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0010.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0010.html
@@ -537,7 +537,7 @@
         </span>
         <span id="w_92" class="ocr_word" title="bbox 616 840 680 893" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δι᾿</ins>
+            <ins title="nlp 2.00">δι᾿</ins>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 692 840 702 857">
@@ -1002,7 +1002,7 @@
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1746 1266 2017 1324" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πολλα| χῶς</ins>
+            <ins title="nlp 2.00">πολλα| χῶς</ins>
           </span>
         </span>
       </span>
@@ -1737,7 +1737,7 @@
         </span>
         <span id="w_307" class="ocr_word" title="bbox 1601 2193 1692 2249" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[λαι</ins>
+            <ins title="nlp 2.00">λαι</ins>
           </span>
         </span>
         <span id="w_310" class="ocr_word" title="bbox 1772 2228 1779 2235">
@@ -1885,7 +1885,7 @@
         </span>
         <span id="w_336_0" class="ocr_word" title="bbox 503 2406 816 2464">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ἐπ)ι</ins>
+            <ins class="alt" title="nlp 2.00">ἐπ)ι</ins>
           </span>
         </span>
         <span id="w_336_1" class="ocr_word" title="bbox 503 2406 816 2464">
@@ -1915,7 +1915,7 @@
         </span>
         <span id="w_341" class="ocr_word" title="bbox 1505 2408 1765 2463" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">προνοία&lt;ι&gt;</ins>
+            <ins title="nlp 2.00">&gt;</ins>
           </span>
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1808 2405 1984 2464" lang="grc">
@@ -1932,12 +1932,12 @@
       <span class="ocr_line" title="bbox 286 2477 2020 2536">
         <span id="w_344" class="ocr_word" title="bbox 286 2477 611 2536" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δι)ωκῆσθα(ι)</ins>
+            <ins title="nlp 2.00">δι)ωκῆσθα(ι)</ins>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 634 2477 846 2534" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ωκεισθα</ins>
+            <ins title="nlp 2.00">ωκεισθα</ins>
           </span>
         </span>
         <span id="w_346" class="ocr_word" title="bbox 872 2477 1001 2534">
@@ -1947,7 +1947,7 @@
         </span>
         <span id="w_347" class="ocr_word" title="bbox 1034 2478 1156 2532">
           <span class="alternatives">
-            <ins title="nlp 2.00">δε&lt;ῖ&gt;</ins>
+            <ins title="nlp 2.00">&gt;</ins>
           </span>
         </span>
         <span id="w_348" class="ocr_word" title="bbox 1181 2477 1427 2535" lang="grc">
@@ -2019,10 +2019,7 @@
         </span>
         <span id="w_361" class="ocr_word" title="bbox 1834 2547 2016 2605" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ρ́ηθήσε</ins>
-            <del title="nlp 0.90">βοηθήσει</del>
-            <del title="nlp 0.89">γηθήσει</del>
-            <del title="nlp 0.88">δεηθήσει</del>
+            <ins title="nlp 2.00">ῥηθήσε</ins>
           </span>
         </span>
       </span>
